--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ body{
     text-align: center;
 }
 .btn{
-    height: 200px;
-    width: 200px;
+    min-width: 115px;
+    min-height: 115px;
+    height: 16vw;
+    width: 16vw;
     border-radius: 20%;
     border: 10px solid black;
     margin: 2.5rem;
